--- a/app/src/main/res/layout/activity_tre_win.xml
+++ b/app/src/main/res/layout/activity_tre_win.xml
@@ -3,13 +3,14 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".oneWin">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="com.iati.mark.fourwindow.treWin">
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Перейти на второй экран"
-        android:id="@+id/button"
+        android:text="Перейти на четвертый экран"
+        android:id="@+id/button3"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:onClick="next"/>
